--- a/capdag_reexport.go.template
+++ b/capdag_reexport.go.template
@@ -1,15 +1,15 @@
-// Package capns provides flat re-exports of all submodules
-// This file should be created as capns.go in the root after reorganization
+// Package capdag provides flat re-exports of all submodules
+// This file should be created as capdag.go in the root after reorganization
 // Matches Rust's src/lib.rs flat pub use re-exports
-package capns
+package capdag
 
 // Re-export URN module
 import (
-	"github.com/machinefabric/capns-go/urn"
-	"github.com/machinefabric/capns-go/cap"
-	"github.com/machinefabric/capns-go/media"
-	"github.com/machinefabric/capns-go/bifaci"
-	"github.com/machinefabric/capns-go/standard"
+	"github.com/machinefabric/capdag-go/urn"
+	"github.com/machinefabric/capdag-go/cap"
+	"github.com/machinefabric/capdag-go/media"
+	"github.com/machinefabric/capdag-go/bifaci"
+	"github.com/machinefabric/capdag-go/standard"
 )
 
 // URN types and functions
